# foxd

./: .dockerignore  .gitignore  Dockerfile.release  README.md  build.sh
.github/workflows/: docs.yml  release.yml
console/: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  svelte.config.js
console/src/: app.html  styles.css
console/src/lib/: api.ts
console/src/lib/components/: Alert.svelte  Loading.svelte  Modal.svelte  StatCard.svelte
console/src/routes/: +layout.svelte  +page.svelte
console/src/routes/config/: +page.svelte
console/src/routes/devices/: +page.svelte
console/src/routes/logs/: +page.svelte
console/src/routes/rules/: +page.svelte
daemon/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  config.toml.example  docker-compose.yml  foxd-daemon.service
daemon/scripts/: check-interfaces.sh
daemon/src/: api.rs  daemon.rs  db.rs  errors.rs  lib.rs  main.rs  models.rs  notifier.rs
docs/: index.md  package.json
docs/.vitepress/: config.mts
docs/.vitepress/theme/: custom.css
docs/api/: examples.md  index.md
docs/guide/: architecture.md  configuration.md  getting-started.md  notification-channels.md  notifications.md  troubleshooting.md
scripts/: README.md  bump-version.sh  docker-build.sh
