[package]
name = "foxd-daemon"
version = "1.0.0"
edition = "2021"
authors = ["P8labs"]
description = "LAN monitoring daemon with packet capture, notifications, and built-in web console"

[lib]
name = "foxd_daemon"
path = "src/lib.rs"

[[bin]]
name = "foxd"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "macros", "migrate"] }

pcap = "1.1"
pnet = { version = "0.34", features = ["std"] }

rtnetlink = "0.14"
netlink-packet-route = "0.19"
futures = "0.3"
libc = "0.2"

reqwest = { version = "0.12", features = ["json"], default-features = false }
openssl = { version = "0.10", optional = true }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

anyhow = "1.0"
thiserror = "1.0"

chrono = { version = "0.4", features = ["serde"] }

sysinfo = "0.30"

config = "0.14"

async-channel = "2.1"

ipnetwork = "0.20"
mac_address = "1.1"

rust-embed = "8"
mime_guess = "2"

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
vendored-openssl = ["openssl/vendored", "reqwest/native-tls-vendored"]

[dev-dependencies]
mockito = "1.2"
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
